crates/qubit-macros/tests/ui/attribute-unknown.stderr
error: unknown attribute
 --> tests/ui/attribute-unknown.rs:3:18
  |
3 | #[handler(query, random_attribute)]
  |                  ^^^^^^^^^^^^^^^^
