crates/qubit-macros/tests/ui/attribute-unknown.rs
use qubit_macros::handler;

#[handler(query, random_attribute)]
async fn my_handler() {}

fn main() {}
